forced language level 13 and preview features